Preload settings into GUI, refactor SettingsMenuController

--- a/src/main/resources/snaked/config/initialSettings.json
+++ b/src/main/resources/snaked/config/initialSettings.json
@@ -6,6 +6,7 @@
   "gameBoardWidth": 41,
   "startingDirection": "RIGHT",
   "snakeSkin": "ONE",
+  "mapSkin": "ONE",
   "soundEffectsOn": "true",
   "difficulty": "EASY"
 }
