--- a/src/main/resources/snaked/config/initialSettings.json
+++ b/src/main/resources/snaked/config/initialSettings.json
@@ -2,11 +2,11 @@
   "startingPosX": 15,
   "startingPosY": 15,
   "initialSnakeLength": 3,
-  "gameBoardHeight": 31,
-  "gameBoardWidth": 31,
+  "gameBoardSize": 31,
   "startingDirection": "RIGHT",
   "snakeSkin": "ONE",
   "mapSkin": "ONE",
   "soundEffectsOn": "true",
-  "difficulty": "MEDIUM"
+  "difficulty": "MEDIUM",
+  "consumableSkin": "APPLE"
 }
